# ai-course-generator

./: .gitignore  Dockerfile  README.md  llm_factory.py  logger.py  main.py  pyproject.toml  requirements.txt
agents/: deconstructor.py  graph.py  librarian.py  professor.py
database/: neo4j_ops.py
docker/: config.yaml  docker-compose.yml
prompts/: librarian.txt
src/: llm_factory.py  main.py
src/agents/: deconstructor.py  discovery.py  librarian.py  professor.py  tools.py
src/database/: neo4j_ops.py
src/graph/: graph.py  state.py
src/logger/: logger.py
src/prompts/: deconstructor.txt  professor.txt
src/ui/: components.py
src/utils/: helpers.py
ui/: components.py  styles.py
utils/: helpers.py
