[project]
name = "accenture-hackathon-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-neo4j>=0.8.0",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "neo4j>=6.1.0",
    "streamlit>=1.55.0",
    "wikipedia>=1.4.0",
]
